--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin recipes</h1>
-    <a href = "/odin-recipes/biryani.html">Biryani</a>
+    <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/biryani.html">Biryani</a></li>
+        <li><a href="recipes/shahipaneer.html">Shahi Paneer</a></li>
+    </ul>
 </body>
 </html>
